Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_hangman@error-state-basic - dmesg-warn - *ERROR* Failed to initialise HW following reset (-5)
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6674/bat-atsm-1/igt@i915_hangman@error-state-basic.html
<6> [208.070615] [IGT] i915_hangman: executing
<7> [208.086378] i915 0000:4d:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [208.087040] i915 0000:4d:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<6> [208.117488] [IGT] i915_hangman: starting subtest error-state-basic
<7> [208.117605] i915 0000:4d:00.0: [drm:error_state_write [i915]] Resetting error state
<6> [208.283970] i915 0000:4d:00.0: [drm] GPU HANG: ecode 12:0:00000000
<5> [208.286908] i915 0000:4d:00.0: [drm] Resetting chip for Manually reset engine mask to 1
<6> [208.290473] i915 0000:4d:00.0: [drm] GuC firmware i915/dg2_guc_70.bin version 70.5.1
<7> [208.304379] i915 0000:4d:00.0: [drm:guc_enable_communication [i915]] GuC communication enabled
<3> [208.306898] i915 0000:4d:00.0: Failed to set SLPC softlimits (-EINVAL)
<5> [208.307227] i915 0000:4d:00.0: Please file a bug on drm/i915; see https://gitlab.freedesktop.org/drm/intel/-/wikis/How-to-file-i915-bugs for details.
<3> [208.307291] i915 0000:4d:00.0: GuC initialization failed -22
<3> [208.307372] i915 0000:4d:00.0: Enabling uc failed (-5)
<3> [208.307501] i915 0000:4d:00.0: [drm] *ERROR* Failed to initialise HW following reset (-5)
<5> [208.307612] i915 0000:4d:00.0: [drm:add_taint_for_CI [i915]] CI tainted:0x9 by intel_gt_reset+0x1e2/0x340 [i915]
<7> [208.323190] i915 0000:4d:00.0: [drm:error_state_write [i915]] Resetting error state
<6> [208.335507] [IGT] i915_hangman: exiting, ret=0
<6> [208.340360] i915 0000:4d:00.0: [drm] GuC firmware i915/dg2_guc_70.bin version 70.5.1
<7> [208.354755] i915 0000:4d:00.0: [drm:guc_enable_communication [i915]] GuC communication enabled
<3> [208.356277] i915 0000:4d:00.0: Failed to set SLPC softlimits (-EINVAL)
<3> [208.356461] i915 0000:4d:00.0: GuC initialization failed -22
<3> [208.356548] i915 0000:4d:00.0: Enabling uc failed (-5)
<3> [208.356626] i915 0000:4d:00.0: [drm] *ERROR* Failed to initialise HW following reset (-5)
<5> [208.356734] i915 0000:4d:00.0: [drm:add_taint_for_CI [i915]] CI tainted:0x9 by intel_gt_reset+0x1e2/0x340 [i915]